fixes nav on mobile

--- a/public/css/app.less
+++ b/public/css/app.less
@@ -121,7 +121,6 @@ span.l4 {
 }
 
 .nav-shell{
-  overflow:auto;
   padding-top:20px;
   
   ul.nav{
@@ -143,6 +142,7 @@ span.l4 {
       font-size:16px;
       text-transform:uppercase;
       text-align:center;
+      border-bottom:2px solid #FFF;
     }
     
     li.number > a{
