--- a/public/css/responsive.less
+++ b/public/css/responsive.less
@@ -186,15 +186,25 @@
     position:relative;
     left:-50%;
     text-align:left;
-    
     ul.nav{
       list-style:none; 
       position:relative;
       left:50%;
       
+      li{
+        float:left;
+        margin-left:4px;
+        margin-right:4px;
+      }
+      
       li a{
-        padding:2px 6px;
-        font-size: 18px;
+        font-size:14px;
+        //padding:2px 6px;
+        //font-size: 18px;
+      }
+      
+      li.number{
+        display:none;
       }
       
     }
